// python -m grpc_tools.protoc -I. --python_out=. --python_grpc_out=. ./helloworld.proto
syntax = "proto3";

package helloworld;

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}